--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -84,7 +84,7 @@
         }
         button {
           height: 2.5rem;
-          width: 6rem;
+          width: 100%;
           margin-top: 1rem;
           border: 1px solid cyan;
           padding: 0.5rem 1rem;
